[tool.poetry]
name = "nndownload"
version = "1.3.1"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.22"
beautifulsoup4 = "^4.8"
websockets = "^8.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
